# WoTSpaceBin

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
filament-demo/: CMakeLists.txt  main.cpp
include/: spacebin.h
include/common/: array.h  bbox.h  fourcc.h  header_file.h  header_section.h  matrix.h  octree.h  sphere.h  typedefs.h  vector2.h  vector3.h  vector4.h
include/sections/: section_base.h  section_bsma.h  section_bsmi.h  section_bsmo.h  section_bwal.h  section_bwcs.h  section_bwst.h  section_bwt2.h  section_bwwa.h  section_wgsd.h
src/: spacebin.cpp
src/common/: array.cpp
src/sections/: section_bsma.cpp  section_bsmi.cpp  section_bsmo.cpp  section_bwal.cpp  section_bwcs.cpp  section_bwst.cpp  section_bwt2.cpp  section_bwwa.cpp  section_wgsd.cpp
tests/: main.cpp
